--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="TempMail - Free disposable temporary email addresses" />
     <title>TempMail - Temporary Email Service</title>
+    <script>
+      // Redirect .pages.dev to custom domain
+      if (window.location.hostname === 'tempmailgb.pages.dev') {
+        window.location.replace('https://tempmailgb.com' + window.location.pathname + window.location.search + window.location.hash);
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
