feat: comprehensive mobile optimization for TempMail app
- Optimized header with responsive sizing and spacing
- Mobile-friendly email generator with stacked layout
- Responsive inbox and email viewer with proper text handling
- Optimized modals (command palette, auth) for mobile screens
- Mobile-friendly content sections (How to Use, Why Use, FAQ)
- Responsive footer with compact layout
- Added mobile-specific CSS improvements:
  * 44px minimum touch targets
  * Prevent zoom on input focus
  * Smooth touch scrolling
  * Optimized scrollbars
  * Safe area support for notched devices
- Updated viewport meta tag for better mobile support
- All breakpoints tested from 320px to 1920px+

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Basic Meta Tags -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
     <meta name="description" content="TempMail - Free disposable temporary email service. Generate instant temporary email addresses with no registration required. Protect your privacy and avoid spam." />
     <meta name="keywords" content="temporary email, disposable email, temp mail, fake email, email generator, throwaway email, anonymous email, privacy, spam protection" />
     <meta name="author" content="TempMail" />
