Update email expiration from 1 hour to 15 minutes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@
           "name": "How long does the temporary email last?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Your temporary email address remains active for 1 hour from the time of generation. After this period, the email address and all received messages are automatically deleted to protect your privacy."
+            "text": "Your temporary email address remains active for 15 minutes from the time of generation. After this period, the email address and all received messages are automatically deleted to protect your privacy."
           }
         },
         {
